[tool.poetry]
name = "bender"
version = "0.4.0"
description = "CLI admin interface for Atlassian Jira"
authors = ["Charles Moreland <morelanc@ohsu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"
pyyaml = "^5.3.1"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[tool.poetry.scripts]
bender = 'bender.cli:cli'
jbender = 'bender.jira.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
